--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ADE8F4;
     --foreground: #ededed;
   }
 }
